--- a/src/replx/templates/includes.xml
+++ b/src/replx/templates/includes.xml
@@ -29,20 +29,20 @@
 		<script
             src="//ncuillery.github.io/angular-breadcrumb/asset/angular-breadcrumb.js"></script>
 			
-          <!-- others -->
+          <!-- others  -->    
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"  ></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/stacktrace.js/0.6.0/stacktrace.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/dexie/1.1.0/Dexie.js"></script>   
     <script src="//cdn.rawgit.com/FlussoBV/NgDexie/v0.0.15/build/ngDexie.js"></script> 
     <script src="//cdn.rawgit.com/twygmbh/angular-auto-height/9c7a5bdf673b1296d5dd504f463e478c20efc101/dist/auto-height.js"></script> 
-             
-    <!-- local libs -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.js"
+    type="text/javascript" charset="utf-8"></script>      
+    <!-- local libs   --> 
     <script src="/static/lib/config.js"></script>
     <script src="/static/lib/angular-treemendous-0.2.3/angular-treemendous.js"  ></script>
     <script src="/static/lib/angular-growl-2/0.7.0/angular-growl.min.js"  ></script>
-    <script src="/static/lib/angular-ya-treeview/0.2.2/ya-treeview-tpls.js"  ></script>
-    <script src="/static/lib/quodatum-directives/0.1.0/directives.js"  ></script>   
-  <script src="/static/lib/svg-pan-zoom/3.2.3/svg-pan-zoom.js"  ></script>   
+    <script src="/static/lib/angular-ya-treeview/0.2.2/ya-treeview-tpls.js"  ></script> 
+ 
 	</js>
 </includes>
