--- a/src/static/replx/app.css
+++ b/src/static/replx/app.css
@@ -5,17 +5,7 @@ body {
     padding-top: 70px;
 }
   
-
-.ace { 
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
+.ace_editor  {
+      height : 200px;
     }
-.ace-container {
-    position: relative;
-}
-.extend {
-    height:400px;
-} 
+
