--- a/src/static/replx/templates/term.xhtml
+++ b/src/static/replx/templates/term.xhtml
@@ -1,4 +1,6 @@
 <div>
-<div>THE TERM</div>
+ <div class="ace-container  extend">
+         <div ui-ace="aceOption" ng-model="aceModel" class="ace"></div>        
+  </div>
 <div>THE TERM</div><div>THE TERM</div><div>THE TERM</div>
 </div>
