--- a/src/static/replx/templates/navbar.xhtml
+++ b/src/static/replx/templates/navbar.xhtml
@@ -93,7 +93,7 @@
 					<ul class="dropdown-menu">
 	
 						<li>
-							<a href="/doc/#/data/app/replx" tabindex="-1">
+							<a href="/doc/#/data/app/replx" tabindex="-1" target="doc">
 								<i class="glyphicon glyphicon-eye-open"></i>
 								Documentation
 							</a>
