--- a/src/static/replx/templates/navbar.xhtml
+++ b/src/static/replx/templates/navbar.xhtml
@@ -22,8 +22,8 @@
 						Terminal
 					</a>
 				</li>
-				<li class="dropdown" dropdown="dropdown">
-					<a href="#" class="dropdown-toggle" dropdown-toggle="dropdown-toggle"
+				<li class="dropdown" uib-dropdown="uib-dropdown">
+					<a href="#" class="dropdown-toggle" uib-dropdown-toggle="uib-dropdown-toggle"
 						data-toggle="dropdown">
 						System
 						<b class="caret"></b>
@@ -84,9 +84,9 @@
 
 			</div>
 			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown" dropdown="dropdown">
+				<li class="dropdown" uib-dropdown="uib-dropdown">
 					<a href="#" class="dropdown-toggle" title="{{$state.current.name}}({{$stateParams}}) "
-						data-toggle="dropdown" dropdown-toggle="dropdown-toggle">
+						data-toggle="dropdown" uib-dropdown-toggle="uib-dropdown-toggle">
 						About
 						<b class="caret"></b>
 					</a>
