--- a/src/static/replx/templates/about.xhtml
+++ b/src/static/replx/templates/about.xhtml
@@ -1,22 +1,26 @@
 <div>
 	<div class="jumbotron">
 		<h1>
-			<img src="/static/replx/logo.svg" style="width: 60px; height: 60px" /> Repl.X
+			<img src="/static/replx/logo.svg" style="width: 60px; height: 60px" />
+			Repl.X
 			<div class="pull-right">ALPHA</div>
 		</h1>
 		<p>REPL.X a BaseX REPL</p>
-    <p class="pull-right">ver: {$version}</p>
+		<p class="pull-right">ver: {{version}}</p>
 	</div>
 	<ul>
 		<li>This application requires internet access (for CDN ).</li>
-		<li>Source on <a
-			href="https://github.com/Quodatum/replx" target="_blank">Github</a>
+		<li>
+			Source on
+			<a href="https://github.com/Quodatum/replx" target="_blank">Github</a>
 		</li>
-		<li>Icon from <a
-			href="http://simpleicon.com/pen-5.html" target="_blank">SimpleIcon
-		</a>
+		<li>
+			Icon from
+			<a href="http://simpleicon.com/pen-5.html" target="_blank">SimpleIcon
+			</a>
 		</li>
-
+		<li>cacherestxq: {{cacherestxq}}
+		</li>
 	</ul>
 
 </div>
