--- a/src/static/replx/templates/about.xhtml
+++ b/src/static/replx/templates/about.xhtml
@@ -5,8 +5,13 @@
 			Repl.X
 			<div class="pull-right">ALPHA</div>
 		</h1>
-		<p>REPL.X a BaseX REPL</p>
-		<p class="pull-right">ver: {{version}}</p>
+		<p>
+			REPL.X a BaseX
+			<a
+				href="https://en.wikipedia.org/wiki/Read%E2%80%93eval%E2%80%93print_loop"
+				target="_blank">REPL</a>
+		</p>
+		<p class="pull-right">ver: {{status.version}}</p>
 	</div>
 	<ul>
 		<li>This application requires internet access (for CDN ).</li>
@@ -19,7 +24,7 @@
 			<a href="http://simpleicon.com/pen-5.html" target="_blank">SimpleIcon
 			</a>
 		</li>
-		<li>cacherestxq: {{cacherestxq}}
+		<li>cacherestxq: {{status.cacherestxq}}
 		</li>
 	</ul>
 
