--- a/src/static/replx/templates/navbar.xhtml
+++ b/src/static/replx/templates/navbar.xhtml
@@ -17,7 +17,7 @@
 		<div class="collapse navbar-collapse" ng-class="{'in':!navCollapsed}">
 			<ul class="nav navbar-nav">
 				<li>
-					<a ui-sref="term">
+					<a ui-sref="term.new">
 						<i class="fa fa-desktop"></i>
 						Terminal
 					</a>
@@ -37,33 +37,7 @@
 								Endpoints
 							</a>
 						</li>
-						<li>
-							<a ui-sref="component.basex.index">
-								<i class="fa fa-file-code-o"></i>
-								System modules
-							</a>
-						</li>
-						<li role="presentation" class="divider"></li>
-						<li role="presentation" class="dropdown-header">Client</li>
-						<li>
-							<a ui-sref="component.index">
-								<i class="fa fa-puzzle-piece"></i>
-								Components
-							</a>
-						</li>
-						<li role="presentation" class="divider"></li>
-						<li>
-							<a ui-sref="entity.index" tabindex="-1">
-								<i class="glyphicon glyphicon-list-alt"></i>
-								Entities
-							</a>
-						</li>
-                        <li>
-                            <a ui-sref="tasks.index">
-                                <i class="fa fa-tasks"></i>
-                                Tasks
-                            </a>
-                        </li>
+						
 					</ul>
 				</li>
 				
